excluding 8758 due to http 500 from github api

--- a/.ciignore.json
+++ b/.ciignore.json
@@ -26,5 +26,9 @@
     {
         "build": 31911,
         "comment": "minio connection issues (test infra rare issue)"
+    },
+    {
+        "build": 8758,
+        "comment": "github api temp issue"
     }
 ]
