500 from github api

--- a/.ciignore.json
+++ b/.ciignore.json
@@ -30,5 +30,9 @@
     {
         "build": 8758,
         "comment": "github api temp issue"
+    },
+    {
+        "build": 34533,
+        "comment": "github api temp issue"
     }
 ]
